2008-10-09 [paul]	0.9.16

	0.9.16 released


2009-09-29 [holger]	0.9.15cvs1

	* src/perl_plugin.c
		Protect against procheader_parse_header()
		returning NULL

2008-12-19 [paul]	0.9.15

	0.9.15 released

2008-12-07 [paul]	0.9.14cvs2

	* configure.ac
		check for compiler before setting CFLAGS

2008-11-19 [wwp]	0.9.14cvs1

	* src/perl_gtk.c
	* src/perl_plugin.c
		Replace occurrences of "command line" with "command-line" everywhere.

2008-10-03 [paul]	0.9.14

	0.9.14 released

2008-08-07 [colin]	0.9.13cvs2

	* src/perl_plugin.c
		Undeprecate

2008-07-29 [colin]	0.9.13cvs1

	* src/perl_gtk.c
		Switch the main menu to GtkUIManager

2008-04-18 [paul]	0.9.13

	0.9.13 released

2008-03-12 [colin]	0.9.12cvs1

	* configure.ac
		Enable -Wall

2007-12-17 [paul]	0.9.12

	0.9.12 released

2007-11-21 [colin]	0.9.11cvs1

	* src/perl_gtk.c
	* src/perl_plugin.c
		Use xdg-open if possible

2007-11-19 [paul]	0.9.11

	0.9.11 released

2007-10-04 [colin]	0.9.10cvs3

	* src/perl_plugin.c
		Verify success on writes

2007-10-03 [holger]	0.9.10cvs2

	* src/perl_plugin.c
		Get rid of double definition of _() symbol
		by undefining the Perl version (which is not used,
		and doesn't do anything anyways).
		Thanks to Colin for pointing this out.

2007-09-03 [ticho]	0.9.10cvs1

	* Makefile.am
	* README
	* cm_perl.pod
	* sc_perl.pod
		Renamed "sc_perl.pod" to "cm_perl.pod".

2007-09-03 [paul]	0.9.10

	0.9.10 released

2007-08-22 [hb]	0.9.9cvs3

	* COPYING
	* sc_perl.pod
	* src/perl_gtk.c
	* src/perl_gtk.h
	* src/perl_plugin.c
	* src/perl_plugin.h
	* tools/matcherrc2perlfilter.pl
		Change license to GPLv3 or later

2007-08-16 [paul]	0.9.9cvs2

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-11 [colin]	0.9.9cvs1

	* src/perl_plugin.c
		Specify license better (GPL2+)

2007-07-03 [paul]	0.9.9

	0.9.9 released

2007-06-21 [colin]	0.9.8cvs1

	* src/perl_plugin.c
		Update plugin API

2007-04-16 [paul]	0.9.8

	0.9.8 released

2007-03-21 [wwp]	0.9.7cvs2

	* configure.ac