@@ -31,3 +31,4 @@
 ( cvs diff -u -r 1.2.2.10 -r 1.2.2.11 src/perl_gtk.c;  cvs diff -u -r 1.19.2.28 -r 1.19.2.29 src/perl_plugin.c;  ) > 0.9.14cvs1.patchset
 ( cvs diff -u -r 1.19.2.58 -r 1.19.2.59 configure.ac;  ) > 0.9.14cvs2.patchset
 ( cvs diff -u -r 1.19.2.29 -r 1.19.2.30 src/perl_plugin.c;  ) > 0.9.15cvs1.patchset
+( cvs diff -u -r 1.19.2.31 -r 1.19.2.32 src/perl_plugin.c;  ) > 0.9.16cvs1.patchset
